--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,10 @@
 
 .container {
   display: grid;
-  grid-template-columns: 200px 200px 500px;
-  grid-template-rows: 200px 200px 500px;
+  grid-template-columns: 120px 120px 320px;
+  grid-template-rows: 120px 120px 320px;
   justify-content: center;
+  border: solid;
 }
 
 .result {
@@ -17,20 +18,23 @@
   grid-column-end: 4;
   grid-row-start: 1;
   grid-row-end: 2;
+  border: solid;
 }
 
 .backspace {
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 2;
-  grid-row-end: 3;
+  grid-row-end: 4;
+  border: solid;
 }
 
 .clear {
   grid-column-start: 1;
   grid-column-end: 2;
-  grid-row-start: 3;
+  grid-row-start: 4;
   grid-row-end: 6;
+  border: solid;
 }
 
 .number {
@@ -38,6 +42,7 @@
   grid-column-end: 3;
   grid-row-start: 2;
   grid-row-end: 6;
+  border: solid;
 }
 
 .sign {
@@ -45,4 +50,5 @@
   grid-column-end: 4;
   grid-row-start: 2;
   grid-row-end: 6;
+  border: solid;
 }
