--- a/src/App.css
+++ b/src/App.css
@@ -7,16 +7,16 @@
 
 .container {
   display: grid;
-  grid-template-columns: 120px 120px 320px;
-  grid-template-rows: 120px 120px 320px;
+  grid-template-columns: 40px 1fr 1fr;
+  grid-template-rows: 40px 1fr 1fr;
   justify-content: center;
   gap: 8px;
-  row-gap: 4px;
+  row-gap: 8px;
 }
 
 .result {
   grid-column-start: 1;
-  grid-column-end: 4;
+  grid-column-end: 7;
   grid-row-start: 1;
   grid-row-end: 2;
 }
@@ -32,19 +32,5 @@
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 4;
-  grid-row-end: 6;
-}
-
-.number {
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 2;
-  grid-row-end: 6;
-}
-
-.sign {
-  grid-column-start: 3;
-  grid-column-end: 4;
-  grid-row-start: 2;
   grid-row-end: 6;
 }
